tests/test_data/CodeStructureSnippets/bad/sem_err_6.1.ifj21
require "ifj21"

function foo() : integer
  local i : integer = 1
  local j : string = "papa"
  i = i + "papa"

  return i
end
foo()
